packages/lang/test/__golden__/config-errors/evidence-bad-value.txt
error[TF010]: unknown evidence level "verbose"
 --> tflw.config:2:12
  |
2 |   evidence "verbose"
  |            ^^^^^^^^^
  |
  = help: expected one of: full, headers-only, none
